src/lexer/tests/snapshots/char-3.snap
---
source: src/lexer/mod.rs
assertion_line: 392
expression: "(input, Lexer::new(input).scan())"
---
- "'c"
- Err:
    message: "Unterminated character literal. Expecting `'`"
    line: 2
    column: 1

