src/lexer/tests/snapshots/char-6.snap
---
source: src/lexer/mod.rs
assertion_line: 395
expression: "(input, Lexer::new(input).scan())"
---
- "'\\c'"
- Err:
    message: "Invalid character control sequence: `\\c`"
    line: 1
    column: 3

