src/lexer/tests/snapshots/char-7.snap
---
source: src/lexer/mod.rs
assertion_line: 395
expression: "(input, Lexer::new(input).scan())"
---
- "''"
- Err:
    message: "Character literal can't be empty"
    line: 1
    column: 1

