src/lexer/tests/snapshots/char.snap
---
source: src/lexer/mod.rs
assertion_line: 424
expression: "(input, Lexer::new(input).scan())"
---
- "'c'"
- Ok:
    - tt:
        Char: c
      line: 1
      column: 1
    - tt:
        Semicolon: true
      line: 1
      column: 2

