src/lexer/tests/snapshots/cond-2.snap
---
source: src/lexer/mod.rs
assertion_line: 414
expression: "(input, Lexer::new(input).scan())"
---
- "if x > -3 {\n    print(x)\n} else {\n    exit()\n}\n"
- Ok:
    - tt: If
      line: 1
      column: 1
    - tt:
        Ident: x
      line: 1
      column: 4
    - tt:
        Op: Gt
      line: 1
      column: 6
    - tt:
        Op: Sub
      line: 1
      column: 8
    - tt:
        Num: "3"
      line: 1
      column: 9
    - tt: OpenBrace
      line: 1
      column: 11
    - tt:
        Ident: print
      line: 2
      column: 5
    - tt: OpenParen
      line: 2
      column: 10
    - tt:
        Ident: x
      line: 2
      column: 11
    - tt: CloseParen
      line: 2
      column: 12
    - tt:
        Semicolon: true
      line: 2
      column: 13
    - tt: CloseBrace
      line: 3
      column: 1
    - tt: Else
      line: 3
      column: 3
    - tt: OpenBrace
      line: 3
      column: 8
    - tt:
        Ident: exit
      line: 4
      column: 5
    - tt: OpenParen
      line: 4
      column: 9
    - tt: CloseParen
      line: 4
      column: 10
    - tt:
        Semicolon: true
      line: 4
      column: 11
    - tt: CloseBrace
      line: 5
      column: 1
    - tt:
        Semicolon: true
      line: 5
      column: 2

