src/lexer/tests/snapshots/cond-3.snap
---
source: src/lexer/mod.rs
assertion_line: 414
expression: "(input, Lexer::new(input).scan())"
---
- "if x > 3 {\n    print(x)\n} else if y == 1 {\n    exit()\n} else {\n    z\n}\n"
- Ok:
    - tt: If
      line: 1
      column: 1
    - tt:
        Ident: x
      line: 1
      column: 4
    - tt:
        Op: Gt
      line: 1
      column: 6
    - tt:
        Num: "3"
      line: 1
      column: 8
    - tt: OpenBrace
      line: 1
      column: 10
    - tt:
        Ident: print
      line: 2
      column: 5
    - tt: OpenParen
      line: 2
      column: 10
    - tt:
        Ident: x
      line: 2
      column: 11
    - tt: CloseParen
      line: 2
      column: 12
    - tt:
        Semicolon: true
      line: 2
      column: 13
    - tt: CloseBrace
      line: 3
      column: 1
    - tt: Else
      line: 3
      column: 3
    - tt: If
      line: 3
      column: 8
    - tt:
        Ident: y
      line: 3
      column: 11
    - tt:
        Op: Eq
      line: 3
      column: 13
    - tt:
        Num: "1"
      line: 3
      column: 16
    - tt: OpenBrace
      line: 3
      column: 18
    - tt:
        Ident: exit
      line: 4
      column: 5
    - tt: OpenParen
      line: 4
      column: 9
    - tt: CloseParen
      line: 4
      column: 10
    - tt:
        Semicolon: true
      line: 4
      column: 11
    - tt: CloseBrace
      line: 5
      column: 1
    - tt: Else
      line: 5
      column: 3
    - tt: OpenBrace
      line: 5
      column: 8
    - tt:
        Ident: z
      line: 6
      column: 5
    - tt:
        Semicolon: true
      line: 6
      column: 6
    - tt: CloseBrace
      line: 7
      column: 1
    - tt:
        Semicolon: true
      line: 7
      column: 2

